🩹 minor nits; cleanup